headings, paragraph, break, hr, and pre

--- a/index.html
+++ b/index.html
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8">  <!--tells what character set we are using-->
+    <!--this tells how the page will look when it is loaded, default zoom level
+    how will it look on a tablet-->
+
+
+
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Tells mobile browsers to set the width of the page to match the screen,
+     and zoom level to 1.-->
     <title>HTML learning </title>
 </head>
 <body>
-    <h1>Heading two</h1>
+    <h1 title="Heading one ">Heading two</h1> <!--this whole is an element, the title can help us refer this in a css file to modify it-->
+    <!--there can be tags within tags, tags have attributes, h1 above is an element -->
+    <h2>heading two <span>see this is a element/tag within a tage</span></h2>
+    <!--now we talk about anchor tag which is there to open another link-->
+    <!--this tag has an attribute which is href (hyperlink ref) which is basically a link to what the user should
+    go to when they click on it -->
+    <a href="https://youtube.com">youtube</a> <!--now when the person clicks on youtube they are redirected
+    to the website which is inside the href-->
+    <a href="http://google.com" target="_blank" rel="noopener noreferrer">google.com</a>
+    <!--the target fields tells do we want to open it in a new tab or the sab tab
+    if we set it to self it opens the link in the same tab if we write _blank
+    it opens it in a new tab-->
 </body>
 </html>
+
+<!-- the main page that we see is part of the body 
+ only thing that is visible from the head is the title and the image felicon??
+ meta is basically the information that is available to a bot or the webserver
+ this is not visible to the user but visible to someone who visits the page eg server
+  -->
